# Pr1SisDis

./: Práctica1 clases remotas.docx  README.md
Ej0_2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  holaMundo.cpp  holaMundo.h  holaMundo_cliente.cpp  holaMundo_cliente.h  holaMundo_server.cpp  holaMundo_server.h  labsuser.pem  main  main.cpp  mainClient  mainServer  mainServer.cpp
Ej0_2/__MACOSX/: ._serialize.hpp
fileManager/: CMakeCache.txt  CMakeLists.txt  Makefile  README.txt  cmake_install.cmake  data.txt  fileManager  filemanager.cpp  filemanager.h  filemanager_imp.cpp  filemanager_imp.h  filemanager_stub.cpp  filemanager_stub.h  mainClient  mainServer  mainServer.cpp  main_fm.cpp  serialize.hpp
fileManager/dirprueba/: adios.txt  hola.txt  manu.txt  sebas.txt
fileManager/dirprueba_cliente/: writeManu.txt  writemanu.txt
fileManager/docker/: Dockerfile  filemanager.yaml  mainServer  reset.sh  service.yaml
multDocker/: mainServer  mult.yaml  service.yaml
multMatrix/: CMakeCache.txt  CMakeLists.txt  Imp.h  Makefile  MultMatrix_cliente.cpp  MultMatrix_cliente.h  MultMatrix_server.cpp  MultMatrix_server.h  cmake_install.cmake  imp.cpp  mainClient  mainServer  mainServer.cpp  main_multMatrix.cpp  multMatrix  multmatrix.cpp  multmatrix.h  resultado2.txt  serialize.hpp  stub.cpp  stub.h  utils.cpp  utils.h
multMatrix/multDocker/: Dockerfile  Dockerfile~
